build/log/idf_py_stderr_output_365301
/home/yurijn/Documents/lvgl-port/main/main.cpp: In function 'esp_err_t init()':
/home/yurijn/Documents/lvgl-port/main/main.cpp:249:85: warning: cast between incompatible function types from 'esp_err_t (*)()' {aka 'int (*)()'} to 'lv_st7789_send_cmd_cb_t' {aka 'void (*)(_lv_display_t*, const unsigned char*, unsigned int, const unsigned char*, unsigned int)'} [-Wcast-function-type]
  249 |     lv_display_t *display = lv_st7789_create(LCD_H_RES, LCD_V_RES, LV_LCD_FLAG_NONE,(lv_st7789_send_cmd_cb_t)  LCDIOINIT, (lv_st7789_send_color_cb_t) my_lcd_send_color);
      |                                                                                     ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/yurijn/Documents/lvgl-port/main/main.cpp:249:123: warning: cast between incompatible function types from 'void (* (*)(lv_display_t*, const uint8_t*, size_t, uint8_t*, size_t))(lv_display_t*, const uint8_t*, size_t, uint8_t*, size_t)' {aka 'void (* (*)(_lv_display_t*, const unsigned char*, unsigned int, unsigned char*, unsigned int))(_lv_display_t*, const unsigned char*, unsigned int, unsigned char*, unsigned int)'} to 'lv_st7789_send_color_cb_t' {aka 'void (*)(_lv_display_t*, const unsigned char*, unsigned int, unsigned char*, unsigned int)'} [-Wcast-function-type]
  249 |     lv_display_t *display = lv_st7789_create(LCD_H_RES, LCD_V_RES, LV_LCD_FLAG_NONE,(lv_st7789_send_cmd_cb_t)  LCDIOINIT, (lv_st7789_send_color_cb_t) my_lcd_send_color);
      |                                                                                                                           ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/yurijn/Documents/lvgl-port/main/main.cpp:253:38: warning: cast between incompatible function types from 'void (* (*)(lv_display_t*, const lv_area_t*, uint8_t*))(lv_display_t*, const lv_area_t*, uint8_t*)' {aka 'void (* (*)(_lv_display_t*, const lv_area_t*, unsigned char*))(_lv_display_t*, const lv_area_t*, unsigned char*)'} to 'lv_display_flush_cb_t' {aka 'void (*)(_lv_display_t*, const lv_area_t*, unsigned char*)'} [-Wcast-function-type]
  253 |     lv_display_set_flush_cb(display, (lv_display_flush_cb_t)flushcb);
      |                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/home/yurijn/Documents/lvgl-port/main/main.cpp: At global scope:
/home/yurijn/Documents/lvgl-port/main/main.cpp:280:20: error: expected unqualified-id before string constant
  280 | [[noreturn]]extern "C" void app_main(void)
      |                    ^~~
/home/yurijn/Documents/lvgl-port/main/main.cpp: In function 'void loop(void*)':
/home/yurijn/Documents/lvgl-port/main/main.cpp:109:1: warning: 'noreturn' function does return
  109 | }
      | ^
make[3]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/main.cpp.obj] Error 1
make[2]: *** [CMakeFiles/Makefile2:4790: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [CMakeFiles/Makefile2:2007: CMakeFiles/flash.dir/rule] Error 2
make: *** [Makefile:299: flash] Error 2
